assets/scss/pages/_entry.scss
.template--entry {
    .entry {
        &__description {
            margin-bottom: $spacing-32;
        }
        
        img {
            & + em {
                margin-bottom: $spacing-32;
            }
        }
    }

    blockquote {
        margin-top: $spacing-80;
    }
}

